--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.0.4 - by CaTz 16/07/2014
+- Add manual search support for tv-shows and movies
+
 1.0.3 - by CaTz 09/05/2014
 - Fix dependency import
 
