--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+1.0.7 - by DaM 15/12/2014
+- Code rewritten for new layout of napisy24.pl
+
 1.0.6 - by CaTz 08/11/2014
 - Bug fix, add slash or backslash at the end of path (fix xbmcvfs.exists in Helix)
 
