Complete rewrite. Make TV-show search much faster. fixes #21

--- a/resources/language/Polish/strings.po
+++ b/resources/language/Polish/strings.po
@@ -20,7 +20,7 @@ msgstr "Błąd podczas szukania napisów"
 
 msgctxt "#32002"
 msgid "Email"
-msgstr "Nazwa użytkownika"
+msgstr "E-mail"
 
 msgctxt "#32003"
 msgid "Password"
@@ -31,7 +31,7 @@ msgid "Login Details"
 msgstr "Dane logowania"
 
 msgctxt "#32005"
-msgid "Invalid email or password, please edit your credentials in the properties"
+msgid "Invalid email or password, please edit your credentials in the settings"
 msgstr "Niepoprawny email lub hasło. Popraw dane w ustawieniach"
 
 msgctxt "#32006"
@@ -65,3 +65,7 @@ msgstr "MicroDVD"
 msgctxt "#32013"
 msgid "MPL2"
 msgstr "MPL2"
+
+msgctxt "#32014"
+msgid "You are logged in successfully"
+msgstr "Jesteś zalogowany pomyślnie"
