Add the ability to check login credentials from settings
(cherry picked from commit 2a6496f36878d95720bc4324f3657dbe6b29a25a)

--- a/resources/language/resource.language.pl_pl/strings.po
+++ b/resources/language/resource.language.pl_pl/strings.po
@@ -67,3 +67,7 @@ msgstr "MPL2"
 msgctxt "#32014"
 msgid "You are logged in successfully"
 msgstr "Jesteś zalogowany pomyślnie"
+
+msgctxt "#32015"
+msgid "Check login credentials"
+msgstr "Sprawdź dane logowania"
